# LogicFactory-hub-pku

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  arch_manager.cpp  convert.cpp  gen_verilog.cpp  graphmize.cpp  logic_manager.cpp  logicfactory.cpp  netlist_manager.cpp  wrapper_arch_logic.cpp  wrapper_logic_netlist.cpp
config/layer_netlist/ieda/: config.json  config_sky130.json  input.json  output.json
config/layer_netlist/ieda/flow/: floorplan.json  pdn.json  placement.json  routing.json
demo/: test.tcl
src/: CMakeLists.txt
src/layer_arch/: CMakeLists.txt
src/layer_arch/layer_arch/: arch_manager.hpp
src/layer_arch/layer_arch/api/yosys/: frame.hpp
src/layer_arch/layer_arch/api/yosys/io/: read_aiger.hpp  read_blif.hpp  read_json.hpp  read_liberty.hpp  read_rtlil.hpp  read_verilog.hpp  write_aiger.hpp  write_blif.hpp  write_btor.hpp  write_edif.hpp  write_firrtl.hpp  write_json.hpp  write_rtlil.hpp  write_spice.hpp  write_verilog.hpp
src/layer_arch/layer_arch/api/yosys/pass/: abc.hpp  aigmap.hpp  flatten.hpp  flattern.hpp  fsm.hpp  hierarchy.hpp  opt.hpp  print_stat.hpp  rename.hpp  techmap.hpp
src/layer_formal/: CMakeLists.txt
src/layer_logic/: CMakeLists.txt
src/layer_logic/layer_logic/: logic_manager.hpp
src/layer_logic/layer_logic/api/abc/: frame.hpp
src/layer_logic/layer_logic/api/abc/io/: read_aiger.hpp  read_bench.hpp  read_blif.hpp  read_cnf.hpp  read_formula.hpp  read_genlib.hpp  read_liberty.hpp  read_pla.hpp  read_truth.hpp  read_verilog.hpp  write_aiger.hpp  write_bench.hpp  write_blif.hpp  write_cnf.hpp  write_dot.hpp  write_lut.hpp  write_pla.hpp  write_truth.hpp  write_verilog.hpp
src/layer_logic/layer_logic/api/abc/map/: map_asic.hpp  map_fpga.hpp
src/layer_logic/layer_logic/api/abc/opt/: rewrite.hpp
src/layer_logic/layer_logic/api/abc/pass/: balance.hpp  map_asic.hpp  map_fpga.hpp  print_stat.hpp  refactor.hpp  rename.hpp  resub.hpp  rewrite.hpp  strash.hpp
src/layer_logic/layer_logic/api/lsils/: frame.hpp
src/layer_logic/layer_logic/api/lsils/io/: read_aiger.hpp  read_bench.hpp  read_blif.hpp  read_cnf.hpp  read_genlib.hpp  read_gtech.hpp  read_liberty.hpp  read_pla.hpp  write_aiger.hpp  write_atpg.hpp  write_bench.hpp  write_blif.hpp  write_cnf.hpp  write_dot.hpp  write_verilog.hpp
src/layer_logic/layer_logic/api/lsils/map/: map_asic.hpp  map_fpga.hpp
src/layer_logic/layer_logic/api/lsils/opt/: balance.hpp  balance_sop.hpp  rewrite.hpp  rewrite_cut.hpp
src/layer_logic/layer_logic/api/lsils/pass/: balance.hpp  map_asic.hpp  map_fpga.hpp  print_stat.hpp  refactor.hpp  resub.hpp  rewrite.hpp  strash.hpp
src/layer_logic/layer_logic/api/lsnbu/: exact_map.hpp  lut_resyn.hpp  mighty.hpp  xag_mprm2_area_opt.hpp  xag_mprm_multi_mult_opt.hpp  xagba.hpp  xagrs.hpp  xagrw.hpp  xmgrs.hpp  xmgrw.hpp
src/layer_logic/layer_logic/api/lsnbu/core/: misc.hpp  utils.cpp  utils.hpp  xag_mprm2_area_opt_imp.hpp  xag_mprm_multi_mult_opt_imp.hpp  xmg_rewriting.hpp
src/layer_logic/layer_logic/api/lspku/PowerSyn/RL/: Makefile
src/layer_logic/layer_logic/api/lspku/PowerSyn/RL/scripts/: install_conda_env.sh
src/layer_logic/layer_logic/aux/: convert.hpp  convert_cover.hpp  convert_node.hpp  convert_update.hpp  cover.hpp  graphmize.hpp  type_map.hpp  write_graphml.hpp
src/layer_logic/layer_logic/io/: read_aiger.hpp  read_genlib.hpp  read_gtech.hpp  read_liberty.hpp
src/layer_logic/layer_logic/misc/: po_blasting.hpp
src/layer_logic/layer_logic/op/: convert.hpp  graphmize.hpp  po_blasting.hpp  strash.hpp
src/layer_logic/layer_logic/wrapper/: arch_to_logic.hpp  to_logic_wrapper.hpp  wrapper_arch.hpp  wrapper_logic.hpp
src/layer_netlist/: CMakeLists.txt
src/layer_netlist/layer_netlist/: netlist_manager.hpp
src/layer_netlist/layer_netlist/api/ieda/: config.hpp  frame.hpp
src/layer_netlist/layer_netlist/api/ieda/cts/: run_cts.hpp
src/layer_netlist/layer_netlist/api/ieda/floorplan/: run_floorplan.hpp
src/layer_netlist/layer_netlist/api/ieda/init/: run_init.hpp
src/layer_netlist/layer_netlist/api/ieda/pass/: cts.hpp  floorplan.hpp  init.hpp  placement.hpp  power.hpp  print_stat.hpp  routing.hpp  sta.hpp
src/layer_netlist/layer_netlist/api/ieda/placement/: run_placement.hpp
src/layer_netlist/layer_netlist/api/ieda/routing/: run_routing.hpp
src/layer_netlist/layer_netlist/api/ieda/sta/: run_sta.hpp
src/layer_netlist/layer_netlist/aux/: write_qor.hpp
src/layer_netlist/layer_netlist/eval/: profile_placement.hpp  profile_power.hpp  profile_routing.hpp  profile_timing.hpp
src/layer_netlist/layer_netlist/wrapper/: arch_to_netlist.hpp  logic_to_netlist.hpp  to_idb_wrapper.hpp  wrapper_netlist.hpp
src/layer_phys/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/misc/misc/: anchor.hpp  ntktye.hpp  ports.hpp
src/platform/: CMakeLists.txt
src/platform/tcl/: register.hpp  start.hpp
src/platform/tcl/cmds/: tcl_cmds_arch_yosys.hpp  tcl_cmds_flow.hpp  tcl_cmds_init.hpp  tcl_cmds_io.hpp  tcl_cmds_misc.hpp  tcl_cmds_pass_arch.hpp  tcl_cmds_pass_logic.hpp  tcl_cmds_pass_netlist.hpp  tcl_macro.hpp  utils.hpp
src/platform/tcl/engine/: args.hpp  tcl_cmd.hpp  tcl_encode.hpp  tcl_macro.hpp  tcl_main.hpp  tcl_option.hpp  tcl_script.hpp  utils.hpp
src/platform/tcl/register/: tcl_macro.hpp
src/platform/tcl/register/arch/: tcl_register_yosys.hpp
src/platform/tcl/register/netlist/: tcl_cmd_ieda.hpp  tcl_cmds_ieda.hpp  tcl_register_ieda.hpp
src/utility/: CMakeLists.txt
src/utility/utility/: file.hpp  string.hpp  util.hpp
techlib/: mcnc.genlib
techlib/clean/: gtech.genlib  sky130.genlib
techlib/foundry/asap7/: klayout.lyp  tracks_1.2.0.info
techlib/foundry/sky130/: gern_tracks.tcl
techlib/sdc/: default.sdc
technlib/: fpga7.lib.v  gtech.genlib
test/catch213/: catch.hpp
tool/: merge_libs.pl
toolkit/: CMakeLists.txt
