# utility
add_subdirectory(utility)

# misc
add_subdirectory(misc)

# architectyre layer synthesis (RTL-level synthesis)
add_subdirectory(layer_arch)

# logic layer synthesis (logic optimization)
add_subdirectory(layer_logic)

# netlist layer synthesis (technology mapping)
add_subdirectory(layer_netlist)

# formal layer synthesis (formal verification)
add_subdirectory(layer_formal)

# platform
add_subdirectory(platform)
